// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render MovieForm correctly 1`] = `
<div>
  <Form
    onSubmit={[Function]}
    tag="form"
  >
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Movie title
      </Label>
      <Input
        autoFocus={true}
        bsSize="lg"
        onChange={[Function]}
        placeholder="Title"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Description
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        placeholder="Description"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Director
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        placeholder="Director"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Movie genre
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        type="select"
      >
        <option
          disabled={true}
        >
          Select genre
        </option>
        <option>
          None
        </option>
        <option
          value="action"
        >
          Action
        </option>
        <option
          value="comedy"
        >
          Comedy
        </option>
        <option
          value="sci-fi"
        >
          Sci-Fi
        </option>
        <option
          value="war"
        >
          War
        </option>
        <option
          value="drama"
        >
          Drama
        </option>
        <option
          value="sport"
        >
          Sport
        </option>
        <option
          value="documentary"
        >
          Documentary
        </option>
      </Input>
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Film image address
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        placeholder="Film wrapper"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Movie raiting
      </Label>
      <Input
        bsSize="lg"
        max="5"
        min="1"
        onChange={[Function]}
        placeholder="Rate"
        type="number"
        value={0}
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <SingleDatePicker
        anchorDirection="left"
        customCloseIcon={null}
        customInputIcon={null}
        date={"1970-01-01T00:00:00.000Z"}
        daySize={39}
        disabled={false}
        displayFormat={[Function]}
        enableOutsideDays={false}
        firstDayOfWeek={null}
        focused={false}
        hideKeyboardShortcutsPanel={false}
        horizontalMargin={0}
        id="date"
        initialVisibleMonth={null}
        isDayBlocked={[Function]}
        isDayHighlighted={[Function]}
        isOutsideRange={[Function]}
        isRTL={false}
        keepOpenOnDateSelect={false}
        monthFormat="MMMM YYYY"
        navNext={null}
        navPrev={null}
        numberOfMonths={1}
        onClose={[Function]}
        onDateChange={[Function]}
        onFocusChange={[Function]}
        onNextMonthClick={[Function]}
        onPrevMonthClick={[Function]}
        orientation="horizontal"
        phrases={
          Object {
            "chooseAvailableDate": [Function],
            "clearDate": "Clear Date",
            "closeDatePicker": "Close",
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month",
            "jumpToPrevMonth": "Move backward to switch to the previous month",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
            select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
            "moveFocusByOneMonth": "Switch months",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
            "openThisPanel": "Open this panel",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field",
            "selectFocusedDate": "Select the date in focus",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
            "upArrowDownArrow": "up and down arrow keys",
          }
        }
        placeholder="Date"
        readOnly={false}
        renderCalendarInfo={null}
        renderDay={null}
        renderMonth={null}
        reopenPickerOnClearDate={false}
        required={false}
        screenReaderInputMessage=""
        showClearDate={false}
        showDefaultInputIcon={false}
        withFullScreenPortal={false}
        withPortal={false}
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Button
        color="secondary"
        size="lg"
        tag="button"
      >
        Add Movie
      </Button>
    </FormGroup>
  </Form>
</div>
`;

exports[`should render MovieForm correctly with movie data 1`] = `
<div>
  <Form
    onSubmit={[Function]}
    tag="form"
  >
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Movie title
      </Label>
      <Input
        autoFocus={true}
        bsSize="lg"
        onChange={[Function]}
        placeholder="Title"
        type="text"
        value="spiderman"
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Description
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        placeholder="Description"
        type="text"
        value="spider"
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Director
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        placeholder="Director"
        type="text"
        value="secret"
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Movie genre
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        type="select"
      >
        <option
          disabled={true}
        >
          Select genre
        </option>
        <option>
          None
        </option>
        <option
          value="action"
        >
          Action
        </option>
        <option
          value="comedy"
        >
          Comedy
        </option>
        <option
          value="sci-fi"
        >
          Sci-Fi
        </option>
        <option
          value="war"
        >
          War
        </option>
        <option
          value="drama"
        >
          Drama
        </option>
        <option
          value="sport"
        >
          Sport
        </option>
        <option
          value="documentary"
        >
          Documentary
        </option>
      </Input>
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Film image address
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        placeholder="Film wrapper"
        type="text"
        value="img"
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Movie raiting
      </Label>
      <Input
        bsSize="lg"
        max="5"
        min="1"
        onChange={[Function]}
        placeholder="Rate"
        type="number"
        value={7}
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <SingleDatePicker
        anchorDirection="left"
        customCloseIcon={null}
        customInputIcon={null}
        date={"1969-12-28T00:00:00.000Z"}
        daySize={39}
        disabled={false}
        displayFormat={[Function]}
        enableOutsideDays={false}
        firstDayOfWeek={null}
        focused={false}
        hideKeyboardShortcutsPanel={false}
        horizontalMargin={0}
        id="date"
        initialVisibleMonth={null}
        isDayBlocked={[Function]}
        isDayHighlighted={[Function]}
        isOutsideRange={[Function]}
        isRTL={false}
        keepOpenOnDateSelect={false}
        monthFormat="MMMM YYYY"
        navNext={null}
        navPrev={null}
        numberOfMonths={1}
        onClose={[Function]}
        onDateChange={[Function]}
        onFocusChange={[Function]}
        onNextMonthClick={[Function]}
        onPrevMonthClick={[Function]}
        orientation="horizontal"
        phrases={
          Object {
            "chooseAvailableDate": [Function],
            "clearDate": "Clear Date",
            "closeDatePicker": "Close",
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month",
            "jumpToPrevMonth": "Move backward to switch to the previous month",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
            select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
            "moveFocusByOneMonth": "Switch months",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
            "openThisPanel": "Open this panel",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field",
            "selectFocusedDate": "Select the date in focus",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
            "upArrowDownArrow": "up and down arrow keys",
          }
        }
        placeholder="Date"
        readOnly={false}
        renderCalendarInfo={null}
        renderDay={null}
        renderMonth={null}
        reopenPickerOnClearDate={false}
        required={false}
        screenReaderInputMessage=""
        showClearDate={false}
        showDefaultInputIcon={false}
        withFullScreenPortal={false}
        withPortal={false}
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Button
        color="secondary"
        size="lg"
        tag="button"
      >
        Update movie
      </Button>
    </FormGroup>
  </Form>
</div>
`;

exports[`should render error for invalid form submission 1`] = `
<div>
  <Form
    onSubmit={[Function]}
    tag="form"
  >
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Movie title
      </Label>
      <Input
        autoFocus={true}
        bsSize="lg"
        onChange={[Function]}
        placeholder="Title"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Description
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        placeholder="Description"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Director
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        placeholder="Director"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Movie genre
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        type="select"
      >
        <option
          disabled={true}
        >
          Select genre
        </option>
        <option>
          None
        </option>
        <option
          value="action"
        >
          Action
        </option>
        <option
          value="comedy"
        >
          Comedy
        </option>
        <option
          value="sci-fi"
        >
          Sci-Fi
        </option>
        <option
          value="war"
        >
          War
        </option>
        <option
          value="drama"
        >
          Drama
        </option>
        <option
          value="sport"
        >
          Sport
        </option>
        <option
          value="documentary"
        >
          Documentary
        </option>
      </Input>
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Film image address
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        placeholder="Film wrapper"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Movie raiting
      </Label>
      <Input
        bsSize="lg"
        max="5"
        min="1"
        onChange={[Function]}
        placeholder="Rate"
        type="number"
        value={0}
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <SingleDatePicker
        anchorDirection="left"
        customCloseIcon={null}
        customInputIcon={null}
        date={"1970-01-01T00:00:00.000Z"}
        daySize={39}
        disabled={false}
        displayFormat={[Function]}
        enableOutsideDays={false}
        firstDayOfWeek={null}
        focused={false}
        hideKeyboardShortcutsPanel={false}
        horizontalMargin={0}
        id="date"
        initialVisibleMonth={null}
        isDayBlocked={[Function]}
        isDayHighlighted={[Function]}
        isOutsideRange={[Function]}
        isRTL={false}
        keepOpenOnDateSelect={false}
        monthFormat="MMMM YYYY"
        navNext={null}
        navPrev={null}
        numberOfMonths={1}
        onClose={[Function]}
        onDateChange={[Function]}
        onFocusChange={[Function]}
        onNextMonthClick={[Function]}
        onPrevMonthClick={[Function]}
        orientation="horizontal"
        phrases={
          Object {
            "chooseAvailableDate": [Function],
            "clearDate": "Clear Date",
            "closeDatePicker": "Close",
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month",
            "jumpToPrevMonth": "Move backward to switch to the previous month",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
            select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
            "moveFocusByOneMonth": "Switch months",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
            "openThisPanel": "Open this panel",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field",
            "selectFocusedDate": "Select the date in focus",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
            "upArrowDownArrow": "up and down arrow keys",
          }
        }
        placeholder="Date"
        readOnly={false}
        renderCalendarInfo={null}
        renderDay={null}
        renderMonth={null}
        reopenPickerOnClearDate={false}
        required={false}
        screenReaderInputMessage=""
        showClearDate={false}
        showDefaultInputIcon={false}
        withFullScreenPortal={false}
        withPortal={false}
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Button
        color="secondary"
        size="lg"
        tag="button"
      >
        Add Movie
      </Button>
    </FormGroup>
  </Form>
</div>
`;

exports[`should render error for invalid form submission 2`] = `
<div>
  <Form
    onSubmit={[Function]}
    tag="form"
  >
    <p>
      Please fill in the blanks
    </p>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Movie title
      </Label>
      <Input
        autoFocus={true}
        bsSize="lg"
        onChange={[Function]}
        placeholder="Title"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Description
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        placeholder="Description"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Director
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        placeholder="Director"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Movie genre
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        type="select"
      >
        <option
          disabled={true}
        >
          Select genre
        </option>
        <option>
          None
        </option>
        <option
          value="action"
        >
          Action
        </option>
        <option
          value="comedy"
        >
          Comedy
        </option>
        <option
          value="sci-fi"
        >
          Sci-Fi
        </option>
        <option
          value="war"
        >
          War
        </option>
        <option
          value="drama"
        >
          Drama
        </option>
        <option
          value="sport"
        >
          Sport
        </option>
        <option
          value="documentary"
        >
          Documentary
        </option>
      </Input>
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Film image address
      </Label>
      <Input
        bsSize="lg"
        onChange={[Function]}
        placeholder="Film wrapper"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Movie raiting
      </Label>
      <Input
        bsSize="lg"
        max="5"
        min="1"
        onChange={[Function]}
        placeholder="Rate"
        type="number"
        value={0}
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <SingleDatePicker
        anchorDirection="left"
        customCloseIcon={null}
        customInputIcon={null}
        date={"1970-01-01T00:00:00.000Z"}
        daySize={39}
        disabled={false}
        displayFormat={[Function]}
        enableOutsideDays={false}
        firstDayOfWeek={null}
        focused={false}
        hideKeyboardShortcutsPanel={false}
        horizontalMargin={0}
        id="date"
        initialVisibleMonth={null}
        isDayBlocked={[Function]}
        isDayHighlighted={[Function]}
        isOutsideRange={[Function]}
        isRTL={false}
        keepOpenOnDateSelect={false}
        monthFormat="MMMM YYYY"
        navNext={null}
        navPrev={null}
        numberOfMonths={1}
        onClose={[Function]}
        onDateChange={[Function]}
        onFocusChange={[Function]}
        onNextMonthClick={[Function]}
        onPrevMonthClick={[Function]}
        orientation="horizontal"
        phrases={
          Object {
            "chooseAvailableDate": [Function],
            "clearDate": "Clear Date",
            "closeDatePicker": "Close",
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month",
            "jumpToPrevMonth": "Move backward to switch to the previous month",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
            select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
            "moveFocusByOneMonth": "Switch months",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
            "openThisPanel": "Open this panel",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field",
            "selectFocusedDate": "Select the date in focus",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
            "upArrowDownArrow": "up and down arrow keys",
          }
        }
        placeholder="Date"
        readOnly={false}
        renderCalendarInfo={null}
        renderDay={null}
        renderMonth={null}
        reopenPickerOnClearDate={false}
        required={false}
        screenReaderInputMessage=""
        showClearDate={false}
        showDefaultInputIcon={false}
        withFullScreenPortal={false}
        withPortal={false}
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Button
        color="secondary"
        size="lg"
        tag="button"
      >
        Add Movie
      </Button>
    </FormGroup>
  </Form>
</div>
`;
